<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hakankanmaz.ui001.MainActivity" >

    <EditText
        android:id="@+id/txtKullaniciAdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kullaniciadi"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris" />
    
    <Button
        android:id="@+id/btnYeni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yenikayit" />

</LinearLayout>