<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <TextView
        android:id="@+id/lblTarih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAdSoyad"
        android:layout_below="@+id/lblAdSoyad"
        android:text="@string/tarih" />

    <TextView
        android:id="@+id/lblDuyuru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblTarih"
        android:layout_marginTop="10dp"
        android:text="@string/duyuru" />

    <TextView
        android:id="@+id/lblAdSoyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDuyuru"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/adsoyad"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imgNextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/lblTarih"
        android:src="@drawable/ic_action_next_item" />

</RelativeLayout>